@@ -1,13 +1,14 @@
 package no.nav.melosys.service.dokument.brev;
 
+import java.lang.reflect.InvocationTargetException;
 import java.util.EnumMap;
 import java.util.Map;
 
-import no.nav.melosys.domain.kodeverk.Produserbaredokumenter;
+import no.nav.melosys.domain.kodeverk.brev.Produserbaredokumenter;
 import no.nav.melosys.exception.TekniskException;
 import no.nav.melosys.service.dokument.brev.mapper.*;
 
-public class BrevDataMapperRuter {
+class BrevDataMapperRuter {
 
     static Map<Produserbaredokumenter, Class<? extends BrevDataMapper>> mappere = new EnumMap<>(Produserbaredokumenter.class);
 
@@ -16,7 +17,9 @@ public class BrevDataMapperRuter {
         mappere.put(Produserbaredokumenter.ATTEST_A1, AttestMapper.class);
         mappere.put(Produserbaredokumenter.AVSLAG_YRKESAKTIV, AvslagYrkesaktivMapper.class);
         mappere.put(Produserbaredokumenter.AVSLAG_ARBEIDSGIVER, AvslagArbeidsgiverMapper.class);
+        mappere.put(Produserbaredokumenter.AVSLAG_MANGLENDE_OPPLYSNINGER, AvslagManglendeOpplysningerMapper.class);
         mappere.put(Produserbaredokumenter.INNVILGELSE_YRKESAKTIV, InnvilgelsesbrevMapper.class);
+        mappere.put(Produserbaredokumenter.INNVILGELSE_YRKESAKTIV_FLERE_LAND, InnvilgelsesbrevFlereLandMapper.class);
         mappere.put(Produserbaredokumenter.INNVILGELSE_ARBEIDSGIVER, InnvilgelseArbeidsgiverMapper.class);
         mappere.put(Produserbaredokumenter.MELDING_FORVENTET_SAKSBEHANDLINGSTID, ForvaltningsmeldingMapper.class);
         mappere.put(Produserbaredokumenter.MELDING_HENLAGT_SAK, HenleggelsesbrevMapper.class);
@@ -27,13 +30,14 @@ public class BrevDataMapperRuter {
     private BrevDataMapperRuter() {
     }
 
-    public static BrevDataMapper brevDataMapper(Produserbaredokumenter type) throws TekniskException {
+    static BrevDataMapper brevDataMapper(Produserbaredokumenter type) throws TekniskException {
         if (!mappere.containsKey(type)) {
             throw new TekniskException("Produserbaredokumenter " + type.getKode() + " støttes ikke");
         }
+
         try {
-            return mappere.get(type).newInstance();
-        } catch (InstantiationException | IllegalAccessException e) {
+            return mappere.get(type).getConstructor().newInstance();
+        } catch (InstantiationException | IllegalAccessException | InvocationTargetException | NoSuchMethodException e) {
             throw new TekniskException(e);
         }
     }
